infra/k8s/production/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: madlab-client
  namespace: madlab
spec:
  selector:
    app: madlab-client
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
