infra/k8s/production/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: madlab-postgres
  namespace: madlab
spec:
  selector:
    app: madlab-postgres
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
