infra/k8s/production/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: madlab-server
  namespace: madlab
spec:
  selector:
    app: madlab-server
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
